--- a/src/app/styles/Sidebar/Sidebar.scss
+++ b/src/app/styles/Sidebar/Sidebar.scss
@@ -2,6 +2,7 @@
   display: flex;
   flex: 0.35;
   height: 100vh;
+  background-color: #33363d;
 
   .sidebar-left {
     display: flex;
@@ -14,7 +15,7 @@
       margin: 8px 0 12px;
       width: 60px;
       height: 60px;
-      background-color: #2c2a33;
+      background-color: #33363d;
       border-radius: 50%;
       position: relative;
     }
@@ -25,5 +26,13 @@
       left: 50%;
       transform: translate(-50%, -50%);
     }
+  }
+
+  .sidebar-right {
+    display: flex;
+    flex-direction: column;
+    padding: 0 12px;
+    background-color: #2b2d33;
+    position: relative;
   }
 }
