--- a/src/app/styles/Sidebar/Sidebar.scss
+++ b/src/app/styles/Sidebar/Sidebar.scss
@@ -1,6 +1,5 @@
 .sidebar {
   display: flex;
-  flex: 0.35;
   height: 100vh;
   background-color: #33363d;
 
@@ -34,5 +33,33 @@
     padding: 0 12px;
     background-color: #2b2d33;
     position: relative;
+    width: 240px;
+
+    .sidebar-right-top {
+      display: flex;
+      justify-content: space-between;
+      align-items: center;
+      padding: 12px 16px;
+      color: #fff;
+    }
+
+    .sidebar-right-channels {
+      padding: 12px 16px;
+
+      .sidebar-right-channels-header {
+        color: #fff;
+        display: flex;
+        justify-content: space-between;
+
+        .sidebar-right-channels-header-top {
+          display: flex;
+        }
+
+        .sidebar-right-channels-header-plus {
+          color: #fff;
+          cursor: pointer;
+        }
+      }
+    }
   }
 }
