--- a/src/app/styles/Sidebar/Sidebar.scss
+++ b/src/app/styles/Sidebar/Sidebar.scss
@@ -60,6 +60,28 @@
           cursor: pointer;
         }
       }
+
+      .sidebar-right-channels-list-item {
+        color: #7b7c85;
+        padding-left: 16px;
+        margin-top: 8px;
+        display: flex;
+        gap: 12px;
+        align-items: center;
+
+        .sidebar-right-channels-list-item-hash {
+          font-size: 16px;
+        }
+
+        .sidebar-right-channels-list-item-text {
+          cursor: pointer;
+          transition: all 0.3s;
+
+          &:hover {
+            opacity: 0.7;
+          }
+        }
+      }
     }
   }
 }
