--- a/src/app/styles/Chat/Chat.scss
+++ b/src/app/styles/Chat/Chat.scss
@@ -4,6 +4,7 @@
   background-color: #34373c;
   position: relative;
   height: 100vh;
+  padding: 0 16px 12px 16px;
 
   // header
   .chat-header {
@@ -34,7 +35,7 @@
       padding-right: 16px;
       display: flex;
       align-items: center;
-      gap: 12px;
+      gap: 8px;
       color: #7b7c85;
 
       .chat-header-right-search {
@@ -43,12 +44,12 @@
         color: gray;
         background-color: #40404a;
         border-radius: 4px;
-        padding: 4px;
+        padding: 8px 12px;
 
         .chat-header-right-search-input {
           background: transparent;
           outline: 0;
-          color: white;
+          color: #fff;
           border: none;
         }
       }
@@ -58,14 +59,12 @@
   // messages
   .chat-messages {
     height: 100vh;
-    overflow-y: scroll;
 
     .chat-messages-message {
       display: flex;
       align-items: center;
       padding: 16px;
       color: #fff;
-      margin-bottom: -16px;
     }
 
     .chat-messages-message-info {
@@ -76,6 +75,30 @@
       color: #7b7c85;
       margin-left: 20px;
       font-size: 16px;
+    }
+  }
+
+  // input
+  .chat-input {
+    color: gray;
+    display: flex;
+    align-items: center;
+    justify-content: space-between;
+    padding: 8px 16px;
+    background-color: #474b53;
+    border-radius: 4px;
+
+    .chat-input-form > input {
+      padding: 12px;
+      background: transparent;
+      border: none;
+      outline: 0;
+      color: #fff;
+      width: 100%;
+    }
+
+    .chat-input-form > button {
+      display: none;
     }
   }
 }
